--- a/cars_project/.env
+++ b/cars_project/.env
@@ -5,4 +5,5 @@ DATABASE_USER=postgres
 DATABASE_PASSWORD=postgres
 DATABASE_HOST=db
 DATABASE_PORT=5432
-ALLOWED_HOSTS=localhost,127.0.0.1,172.16.0.163
+ALLOWED_HOSTS=localhost,127.0.0.1,172.16.0.163,.cars-api-deployment.com,cars-api-deployment.herokuapp.com
+DJANGO_ALLOWED_HOSTS=.cars-api-deployment.com,cars-api-deployment.herokuapp.com
